force-app/main/default/objects/WMSBillPayReq__c/WMSBillPayReq__c.object-meta.xml
<CustomObject>
    <label>WMS Bill+Trx Plan</label>
    <nameField>
        <displayFormat>WBPR-{000000}</displayFormat>
        <label>WMS BILL+TRX PLAN ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WMS Bill+Trx Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>