force-app/main/default/objects/WMSBillPayReq__c/fields/DepositOffsetID__c.field-meta.xml
<CustomField>
    <fullName>DepositOffsetID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPOSIT OFFSET ID</label>
    <referenceTo>DepositOffset__c</referenceTo>
    <relationshipLabel>WMS BILL+TRX PLAN</relationshipLabel>
    <relationshipName>WMSBillTrxPlanDepOffs</relationshipName>
    <type>Lookup</type>
</CustomField>