force-app/main/default/objects/WMSBillPayReq__c/fields/UnpaidBalanceOfBuyingUSDFormula__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceOfBuyingUSDFormula__c</fullName>
    <formula>WMSBillID__r.UnpaidBalanceOfBuyingUSD__c</formula>
    <label>UNPAID BALANCE OF BUYING(USD)-FORMULA</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>