force-app/main/default/objects/WMSBillPayReq__c/fields/UnreceiveBalOfSellingLocalFormula__c.field-meta.xml
<CustomField>
    <fullName>UnreceiveBalOfSellingLocalFormula__c</fullName>
    <formula>WMSBillID__r.UnreceivedBalanceLocal__c</formula>
    <label>UNRECEIVED BAL OF SELLING(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>