force-app/main/default/objects/WMSBillPayReq__c/fields/WMSUnpaidBalOfBuyingLocalPayReq__c.field-meta.xml
<CustomField>
    <fullName>WMSUnpaidBalOfBuyingLocalPayReq__c</fullName>
    <label>WMS UNPAID BAL OF BUYING(LOCAL)-PAY REQ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>