force-app/main/default/objects/WMSBillPayReq__c/fields/WMSUnpaidBalOfBuyingUSDPayReq__c.field-meta.xml
<CustomField>
    <fullName>WMSUnpaidBalOfBuyingUSDPayReq__c</fullName>
    <label>WMS UNPAID BAL OF BUYING(USD)-PAY REQ</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>