force-app/main/default/objects/WMSBillPayReq__c/fields/WMSWorkOrderID__c.field-meta.xml
<CustomField>
    <fullName>WMSWorkOrderID__c</fullName>
    <formula>WMSBillID__r.WorkOrderID__r.Name</formula>
    <label>WMS WORK ORDER ID</label>
    <type>Text</type>
</CustomField>